Fix footer covering page content

--- a/orangepages/static/css/sticky-footer-navbar.css
+++ b/orangepages/static/css/sticky-footer-navbar.css
@@ -1,3 +1,20 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 105px;
+}
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 105px;
+  background-color: #f5f5f5;
+}
+
 .footer {
   position: absolute;
    bottom: 0;
